Fix #26514 - [Bug] Fix cellStyle in excel export